--- a/Languages/English/Keyed/Rituals.xml
+++ b/Languages/English/Keyed/Rituals.xml
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 	<RitualPredictedOutcomeDescReviaCount>Revia count</RitualPredictedOutcomeDescReviaCount>
+	<RitualTargetBloodstonesInfo>Bloodstones required: {0}</RitualTargetBloodstonesInfo>
 </LanguageData>
