Old invoke blessing disabled by default

--- a/Languages/English/Keyed/Comps.xml
+++ b/Languages/English/Keyed/Comps.xml
@@ -46,4 +46,5 @@
   <ReviaRejectionType>Revia genes rejection type</ReviaRejectionType>
   <InstaKill>Instant kills pawn</InstaKill>
   <NoRejection>No rejection</NoRejection>
+	<ReviaRaceOldSoulreapBlessing>Use old blessing system</ReviaRaceOldSoulreapBlessing>
 </LanguageData>
