--- a/Languages/English/Keyed/Comps.xml
+++ b/Languages/English/Keyed/Comps.xml
@@ -47,4 +47,5 @@
   <InstaKill>Instant kills pawn</InstaKill>
   <NoRejection>No rejection</NoRejection>
 	<ReviaRaceOldSoulreapBlessing>Use the old blessing system</ReviaRaceOldSoulreapBlessing>
+	<RequireReviaGene>Require any revia gene for conversion ritual</RequireReviaGene>
 </LanguageData>
