--- a/Languages/English/Keyed/Rituals.xml
+++ b/Languages/English/Keyed/Rituals.xml
@@ -3,7 +3,7 @@
 	<RitualPredictedOutcomeDescReviaCount>Revia count</RitualPredictedOutcomeDescReviaCount>
 	<MessageRitualRolePawnIsAlreadyRevia>Already revia</MessageRitualRolePawnIsAlreadyRevia>
 	<MessageRitualRoleAnyRevianGeneRequired>Revian gene required</MessageRitualRoleAnyRevianGeneRequired>
-	<RitualTargetMysticalStoneInfo>Mystical stone required</RitualTargetMysticalStoneInfo>
+	<RitualTargetMysticalStoneInfo>Mystical bloodstone required</RitualTargetMysticalStoneInfo>
 	<SacrificerNotSelected>Sacrifcer is not selected</SacrificerNotSelected>
 	<RitualTargetBloodstonesInfo>Bloodstones required: {0}</RitualTargetBloodstonesInfo>
 	<ReviaMinimalBloodstonesCount>Minimal bloodstones required for {0}: {1}</ReviaMinimalBloodstonesCount>
